--- a/index.html
+++ b/index.html
@@ -18,43 +18,34 @@
                 <p class="h3_p">tanjum@navneoGard.org</p>
             </div>
             <div class="item item1">
-                <i class="fas fa-inbox icon"></i>
-                <span>Inbox</span>
+                <a href="#"><i class="fas fa-inbox icon"></i>Inbox</a>
             </div>
             <div class="item">
-                <i class="fas fa-star"></i>
-                <span>Star</span>
+                <a href="#"><i class="fas fa-star icon"></i>Star</a>
             </div>
             <div class="item">
-                <i class="fas fa-paper-plane"></i>
-                <span>Sent mail</span>
+                <a href="#"><i class="fas fa-paper-plane icon"></i>Sent mail</a>
             </div>
             <div class="item">
-                <i class="far fa-envelope-open"></i>
-                <span>Drafts</span>
+                <a href="#"><i class="far fa-envelope-open icon"></i>Drafts</a>
             </div>
             <hr>
             <p class="span1">Labels</p>
             <div class="item">
-                <i class="fas fa-bookmark"></i>
-                <span>Family</span>
+                <a href="#"><i class="fas fa-bookmark icon"></i>Family</a>
             </div>
             <div class="item">
-                <i class="fas fa-bookmark"></i>
-                <span>Friends</span>
+                <a href="#"><i class="fas fa-bookmark icon"></i>Friends</a>
             </div>
             <div class="item">
-                <i class="fas fa-bookmark"></i>
-                <span>Work</span>
+                <a href="#"><i class="fas fa-bookmark icon"></i>work</a>
             </div>
             <hr>
             <div class="item">
-                <i class="fas fa-cog"></i>
-                <span>Settings</span>
+                <a href="#"><i class="fas fa-cog"></i>Setting</a>
             </div>
             <div class="item">
-                <i class="fas fa-comment-alt"></i>
-                <span>Help & Feedback</span>
+                <a href="#"><i class="fas fa-comment-alt icon"></i>Help & Feedback</a>
             </div>
 
         </div>
@@ -138,8 +129,5 @@
         </div>
 
     </div>
-
-
 </body>
-
 </html>
