style:color changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p>Mail</p>
                 <p class="h3_p">tanjum@navneoGard.org</p>
             </div>
-            <div class="item item1">
+            <div class="item">
                 <a href="#"><i class="fas fa-inbox icon"></i>Inbox</a>
             </div>
             <div class="item">
@@ -42,7 +42,7 @@
             </div>
             <hr>
             <div class="item">
-                <a href="#"><i class="fas fa-cog"></i>Setting</a>
+                <a href="#"><i class="fas fa-cog icon"></i>Setting</a>
             </div>
             <div class="item">
                 <a href="#"><i class="fas fa-comment-alt icon"></i>Help & Feedback</a>
@@ -112,22 +112,17 @@
             <p>subtext</p>
         </div>
         <div class="item item1">
-            <i class="fas fa-inbox icon"></i>
-            <span>Inbox</span>
+            <a href="#"><i class="fas fa-inbox icon"></i>Inbox</a>
         </div>
         <div class="item">
-            <i class="fas fa-star"></i>
-            <span>Star</span>
+            <a href="#"><i class="fas fa-star icon"></i>Star</a>
         </div>
         <div class="item">
-            <i class="fas fa-paper-plane"></i>
-            <span>Sent mail</span>
+            <a href="#"><i class="fas fa-paper-plane icon"></i>Sent mail</a>
         </div>
         <div class="item">
-            <i class="far fa-envelope-open"></i>
-            <span>Drafts</span>
+            <a href="#"><i class="far fa-envelope-open icon"></i>Drafts</a>
         </div>
-
     </div>
 </body>
 </html>
